--- a/MagicDreamStore/index.html
+++ b/MagicDreamStore/index.html
@@ -13,6 +13,7 @@
             <ul>
                 <li><a href="#products">Продукти</a></li>
                 <li><a href="#contact">Контакти</a></li>
+                <li><a href="admin.html">Адмін Панель</a></li>
             </ul>
         </nav>
     </header>
