--- a/MagicDreamStore/index.html
+++ b/MagicDreamStore/index.html
@@ -10,13 +10,6 @@
 
 <header>
     <h1>Magic Dream</h1>
-    <nav>
-        <ul>
-            <li><a href="#about">Про нас</a></li>
-            <li><a href="#products">Наші продукти</a></li>
-            <li><a href="#admin" id="adminToggle">Адміністративна панель</a></li>
-        </ul>
-    </nav>
 </header>
 
 <main>
@@ -54,8 +47,20 @@
         <div id="existingProducts"></div>
         <button id="closeAdmin">Закрити панель</button>
     </section>
-    
-</main>
+
+ <!-- Блок кошика -->
+<section id="cartSection">
+    <h2>Ваш кошик</h2>
+    <div id="cartItems">
+        <!-- Товари в кошику будуть додаватися тут -->
+    </div>
+    <div id="cartActions">
+        <button id="placeOrderBtn" class="place-order-btn" style="display:none;">Оформити замовлення</button>
+        <!-- The Clear Cart button will be added dynamically -->
+    </div>
+    <p>Всього: <span id="totalPrice">0</span> грн</p>
+</section>
+
 
 <footer>
     <p>© 2024 Magic Dream. Всі права захищено.</p>
